projects/examples/source/07.16.cpp
/////////////////////////////////////////////

#include <cassert>

/////////////////////////////////////////////

int main() 
{
	auto array = new int[5]{ 1, 2, 3, 4, 5 };

//  -----------------------------------------

	assert(array[5] == 0);

//  -----------------------------------------

//  delete[] array; // error

//  -----------------------------------------

    assert(array[0] == 1);
}

/////////////////////////////////////////////